# organized-aoc

./: .gitignore  Cargo.toml  cargo_wrap.py
aoc/: Cargo.toml
aoc/src/: lib.rs
aoc_index/: Cargo.toml
aoc_index/src/: lib.rs
aoc_macros/: Cargo.toml
aoc_macros/src/: lib.rs
aoc_runner/: Cargo.toml
aoc_runner/src/: lib.rs  main.rs
aoc_runner_binds/: Cargo.toml
aoc_runner_binds/src/: lib.rs
aoc_runner_server/: Cargo.toml
aoc_runner_server/src/: main.rs
aoc_runtime/: Cargo.toml
aoc_runtime/src/: calendar.rs  lib.rs
aoc_runtime/src/__private/: macros.rs
commons/grid/src/: lib.rs
commons/rects/: Cargo.toml
commons/rects/src/: lib.rs
formatter/: Cargo.toml
formatter/src/: lib.rs
manager/: Cargo.toml
manager/src/: main.rs
runner/: Cargo.toml
runner/src/: filters.rs  lib.rs  main.rs  report.rs  report_style.css
skel/: Cargo.toml
skel/src/: lib.rs
solutions/2015/1/: Cargo.toml
solutions/2015/1/src/: lib.rs
solutions/2015/10/: Cargo.toml  build.rs
solutions/2015/10/src/: elements.tsv  lib.rs
solutions/2015/11/: Cargo.toml
solutions/2015/11/src/: lib.rs
solutions/2015/12/: Cargo.toml
solutions/2015/12/src/: lib.rs
solutions/2015/13/: Cargo.toml
solutions/2015/13/src/: lib.rs
solutions/2015/14/: Cargo.toml
solutions/2015/14/src/: lib.rs
solutions/2015/15/: Cargo.toml
solutions/2015/15/src/: lib.rs
solutions/2015/16/: Cargo.toml
solutions/2015/17/: Cargo.toml
solutions/2015/18/: Cargo.toml
solutions/2015/19/: Cargo.toml
solutions/2015/2/: Cargo.toml
solutions/2015/3/: Cargo.toml
solutions/2015/4/: Cargo.toml
solutions/2015/5/: Cargo.toml
solutions/2015/6/: Cargo.toml
solutions/2015/7/: Cargo.toml
solutions/2015/9/: Cargo.toml
solutions/2015/index/: Cargo.toml
solutions/2022/1/: Cargo.toml
solutions/2022/10/: Cargo.toml
solutions/2022/11/: Cargo.toml
solutions/2022/12/: Cargo.toml
solutions/2022/13/: Cargo.toml
solutions/2022/14/: Cargo.toml
solutions/2022/15/: Cargo.toml
solutions/2022/16/: Cargo.toml
solutions/2022/17/: Cargo.toml
solutions/2022/18/: Cargo.toml
solutions/2022/19/: Cargo.toml
solutions/2022/2/: Cargo.toml
solutions/2022/20/: Cargo.toml
solutions/2022/21/: Cargo.toml
solutions/2022/22/: Cargo.toml
solutions/2022/23/: Cargo.toml
solutions/2022/24/: Cargo.toml
solutions/2022/25/: Cargo.toml
solutions/2022/3/: Cargo.toml
solutions/2022/4/: Cargo.toml
solutions/2022/5/: Cargo.toml
solutions/2022/6/: Cargo.toml
solutions/2022/7/: Cargo.toml
solutions/2022/8/: Cargo.toml
solutions/2022/9/: Cargo.toml
solutions/2023/1/: Cargo.toml
solutions/2023/2/: Cargo.toml
solutions/2024/1/: Cargo.toml
solutions/2024/10/: Cargo.toml
solutions/2024/11/: Cargo.toml
solutions/2024/13/: Cargo.toml
solutions/2024/14/: Cargo.toml
solutions/2024/15/: Cargo.toml
solutions/2024/16/: Cargo.toml
solutions/2024/17/: Cargo.toml
solutions/2024/18/: Cargo.toml
solutions/2024/2/: Cargo.toml
solutions/2024/3/: Cargo.toml
solutions/2024/4/: Cargo.toml
solutions/2024/5/: Cargo.toml
solutions/2024/6/: Cargo.toml
solutions/2024/7/: Cargo.toml
solutions/2024/8/: Cargo.toml
solutions/2024/9/: Cargo.toml
solutions/index/: Cargo.toml
solutions/index/src/: lib.rs
solutions/skel/: Cargo.toml
solutions/skel/src/: lib.rs
(+57 files in other folders)
