[package]
name = "aoc_runner_server"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc = { path = "../aoc" }
aoc_runner_binds = { path = "../aoc_runner_binds" }
aoc_index = { path = "../aoc_index" }

chrono = "0.4.26"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
