[package]
name = "formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axohtml = "0.5.0"
clap = "4.3.23"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
simple_logger = { version = "4.2.0", features = ["stderr"] }
