[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aoc_library = { path = "../library" }
formatter = { path = "../formatter" }
arrayvec = "0.7.4"
clap = { version = "4.3.22", features = ["derive"] }
either = { version = "1.9.0", features = ["serde"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
simple_logger = { version = "4.2.0", features = ["stderr"] }
