[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
either = "1.9.0"
features = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
simple_logger = { version = "4.2.0", features = ["stderr"] }
html-builder = "0.5.1"
humantime = "2.1.0"
